samples/_failures_safe/1761396620_8c2e15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c822692.c: In function ‘main’:
./samples/SAFE/__tmp_7c822692.c:166:25: error: missing terminating " character
  166 |         fprintf(stderr, "De
      |                         ^~~
./samples/SAFE/__tmp_7c822692.c:166:9: error: expected expression at end of input
  166 |         fprintf(stderr, "De
      |         ^~~~~~~
./samples/SAFE/__tmp_7c822692.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7c822692.c:166:9: error: expected declaration or statement at end of input
